# StereoVision-ADCensus

./: LICENSE  README.md
ADCensusBM/: CMakeLists.txt  adcensuscv.cpp  adcensuscv.h  aggregation.cpp  aggregation.h  common.h  disparityrefinement.cpp  disparityrefinement.h  imageprocessor.cpp  imageprocessor.h  main.cpp  scanlineoptimization.cpp  scanlineoptimization.h  stereoprocessor.cpp  stereoprocessor.h
ADCensusBM/cmake_work/: FindConfig.cmake
ADCensusBM/sample/: config.cfg  images.xml
ImageRectify/: CMakeLists.txt
ImageRectify/sample/: GoPro_left_intrinsics.yml  GoPro_right_intrinsics.yml  config.cfg  extrinsics.yml  images.xml
ImageRectify/src/: main.cpp  rectify.cpp  rectify.h
IntrinsicExtrinsicCalib/: CMakeLists.txt  extrinsic.cpp  intrinsic.cpp  intrinsicextrinsiccalib.cpp  intrinsicextrinsiccalib.h  paramcombination.cpp  paramcombination.h
IntrinsicExtrinsicCalib/sample/: configExtrinsic.cfg  configIntrinsicLeft.cfg  configIntrinsicRight.cfg  imagesExtrinsic.xml  imagesLeftIntrinsic.xml  imagesRightIntrinsic.xml
OpenCVBM/: CMakeLists.txt
OpenCVBM/src/: OpenCVBMWindow.cpp  OpenCVBMWindow.h  OpenCVBMWindow.ui  blockmatching.cpp  blockmatching.h  blockmatchingimage.cpp  blockmatchingimage.h  blockmatchingimage.ui  main.cpp  sgblockmatching.cpp  sgblockmatching.h
PictureOverlay/: CMakeLists.txt
PictureOverlay/src/: PictureOverlay.cpp
evalDisp/: CMakeLists.txt  main.cpp
evalDisp/sample/: config.cfg
evalDisp/sample/data/camera1/: camera1_disps.xml  camera1_extrinsic.yml  camera1_images.xml
evalDisp/sample/data/camera2/: camera2_disps.xml  camera2_images.xml
evalDisp/sample/data/goProBig/: images.xml
evalDisp/sample/data/goProSmall/: disps.xml  goProSmall_extrinsic.yml  images.xml
evalDisp/sample/data/logitech/: disps.xml  images.xml  logitech_extrinsic.yml
